Revert "Use result4j for error handling."
This reverts commit f49a5e72cc9ff128560b5157b9101bbebd3e8426.