@@ -59,7 +59,6 @@
         <maven-deploy-plugin.version>3.0.0</maven-deploy-plugin.version>
 
         <!-- dependencies versions -->
-        <result4j.version>0.0.2_jre21</result4j.version>
         <lombok.version>1.18.30</lombok.version>
         <testng.version>7.7.1</testng.version>
         <mockito.version>4.8.1</mockito.version>
@@ -83,11 +82,6 @@
                 <version>${project.version}</version>
             </dependency>
 
-            <dependency>
-                <groupId>dev.khbd.result4j</groupId>
-                <artifactId>result4j-core</artifactId>
-                <version>${result4j.version}</version>
-            </dependency>
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
@@ -150,10 +144,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                    <fork>true</fork>
-                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
+                    <release>21</release>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
@@ -161,25 +152,11 @@
                             <version>${lombok.version}</version>
                         </path>
                         <path>
-                            <groupId>dev.khbd.result4j</groupId>
-                            <artifactId>result4j-processor</artifactId>
-                            <version>${result4j.version}</version>
-                        </path>
-                        <path>
                             <groupId>com.google.auto.service</groupId>
                             <artifactId>auto-service</artifactId>
                             <version>${auto-service.version}</version>
                         </path>
                     </annotationProcessorPaths>
-                    <compilerArgs>
-                        <arg>-Xplugin:result4j prettyPrint=true</arg>
-                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
-                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
-                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
-                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
